# Sigmafox

./: .gitignore  .ignore  CMakeLists.txt  LANGUAGE SPECIFICATION.md  NOTES.md  README.md  Tasklist.md  build.sh  copy.ps1  debug.ps1  dynamics_test.ps1  ndarray_test.ps1  notes.txt  project.cpp  results.txt  run.ps1  run.sh  test.ps1
SFRefactor/: .gitignore  2  CMakeLists.txt  run.ps1
SFRefactor/source/: definitions.hpp  environment.h  environment.hpp  main.cpp
SFRefactor/source/compiler/: dependencygraph.cpp  dependencygraph.hpp  dependencyresolver.cpp  dependencyresolver.hpp  errorhandler.cpp  errorhandler.hpp  parser.cpp  parser.h  parser.hpp  symbols.hpp  symbolstack.hpp  syntaxnode.hpp  syntaxtree.cpp  syntaxtree.hpp  tokenizer.cpp  tokenizer.h  tokenizer.hpp  tokenizer_impl.cpp
SFRefactor/source/compiler/nodes/: arrayindex.hpp  assignment.hpp  comparison.hpp  derivation.hpp  equality.hpp  expression.hpp  expression_statement.hpp  extraction.hpp  factor.hpp  function_call.hpp  grouping.hpp  if_statement.hpp  include.hpp  magnitude.hpp  primary.hpp  procedure_call.hpp  procedure_statement.hpp  read_statement.hpp  root.hpp  term.hpp  unary.hpp  variable_statement.hpp  write_statement.hpp
SFRefactor/source/compiler/visitors/: expressions.cpp  expressions.hpp  generation.cpp  generation.hpp  reference.hpp
SFRefactor/source/platform/: filesystem.h  filesystem.hpp  system.h  system.hpp
SFRefactor/source/platform/unix/: filesystem.cpp  system.cpp
SFRefactor/source/platform/win32/: filesystem.cpp  system.cpp
SFRefactor/source/utilities/: cli.cpp  cli.h  memoryalloc.cpp  path.cpp  path.h  resourcemanager.cpp  resourcemanager.h  resourcemanager.hpp  string.cpp  string.hpp  vector.hpp
SFRefactor/tests/: dependencies.fox  deptest.fox  example.fox  sample.fox  simple_include.fox
SFRefactor/tests/dependents/: circular.fox  file_d.fox
SFRefactor/tests/dependents/nest/: file_1.fox  file_3.fox  file_4.fox  file_5.fox
SFRefactor/tests/includes/: intrinsics.fox  math.fox
common/: core.h  generate.cpp  generate.h
common/core/: primitives.h  stringutils.cpp  stringutils.h
copy/compiler/: compiler.hpp  graph.cpp  reference.cpp
copy/compiler/parser/: node.hpp  parser.cpp  subnodes.cpp  visitor.hpp
copy/compiler/parser/validators/: blockvalidator.cpp  blockvalidator.hpp  evaluator.hpp
copy/compiler/tokenizer/: token.hpp  tokenizer.cpp  tokenizer.hpp
copy/platform/unix/: filesystem.cpp
copy/ref/: syntaxvisitor.hpp
copy/ref/nodes/: conditional.hpp  function_statement.hpp  main.hpp  module.hpp  primary.hpp
copy/utilities/: path.hpp
documentation/: CLI.md  Compiler.md  Environment.md  Graph.md  Parser.md  Symbols.md  Table.md  Token.md  Tokenizer.md  allocators.md  scanner.md
documentation/listings/Performance Analysis/: CMakeLists.txt  build.ps1  main.cpp  run.ps1
listings/Performance Analysis/: README.md  system.h
meta/cfgp/: CMakeLists.txt  grammar.txt  main.cpp  out.cpp  output.cpp  run.ps1
output/: CMakeLists.txt  main.cpp
source/: cli.cpp  cli.h  commandline.cpp  commandline.h  core.h  definitions.hpp  lexer.cpp  lexer.h  main.c  main.cpp  parse.h  parser.h  runtime.c  runtime.cpp  runtime.h  scan.cpp  scan.h  scanner.h  source.cpp  source.h  state.h  token.h
source/compiler/: ast.cpp  ast.h  compiler.cpp  compiler.hpp  environment.cpp  environment.h  environment.hpp  errorhandler.c  errorhandler.h  exceptions.hpp  expressions.cpp  expressions.h  generation.c  generation.h  graph.cpp  graph.hpp  parser.c  parser.cpp  parser.h  printing.h  reference.cpp  reference.hpp  rparser.c  rparser.h  scanner.cpp  scanner.h  sourcetree.h  statements.cpp  statements.h  stringpool.c  stringpool.h  symbols.hpp  symboltable.c  symboltable.h  token.cpp  token.h  tokenizer.c  tokenizer.h  tokenizer.hpp
source/compiler/environment/: environment.cpp  environment.hpp
source/compiler/generation/: generator.cpp  generator.hpp  sourcefile.cpp  sourcefile.hpp  sourcetree.cpp  sourcetree.hpp
source/compiler/legacy/: grammar.h  parser.cpp  scanner.cpp  token.h
source/compiler/nodes/: derivation.hpp  equality.hpp  loop_statement.hpp  scope_statement.hpp  variable_statement.hpp
source/compiler/parser/: errorhandler.hpp  expressions.cpp  expressions.hpp  node.cpp  node.hpp  parser.cpp  parser.hpp  statements.cpp  statements.hpp  subnodes.cpp  subnodes.hpp  visitor.cpp  visitor.hpp
source/compiler/parser/validators/: blockvalidator.cpp  blockvalidator.hpp  evaluator.cpp  evaluator.hpp  exprtype.cpp  exprtype.hpp
source/compiler/symbols/: symbol.cpp  symbol.hpp  table.cpp  table.hpp
source/compiler/tokenizer/: token.cpp  token.hpp  tokenizer.cpp  tokenizer.hpp
source/compiler/visitors/: assignments.cpp  assignments.hpp
source/core/: allocator.cpp  allocator.h  arena.c  arena.h  cli.c  cli.h  debugging.h  definitions.h  fileio.cpp  fileio.h  generalalloc.c  generalalloc.h  memops.c  memops.h  pool.c  pool.h  primitives.h  resource.c  resource.h  utilities.h
source/core/utilities/: allocator.c  allocator.cpp  allocator.h  array.h  hashtable.c  hashtable.cpp  hashtable.h  linklist.h  string.h
source/platform/: fileio.h  system.h  system.hpp
source/platform/unix/: system.cpp
source/platform/win32/: fileio.c  fileio.cpp  system.c  system.cpp  virtmem.c
source/ref/: symbolstack.hpp  syntaxnodes.hpp
source/ref/nodes/: array_index.hpp  include.hpp  while_statement.hpp
source/utilities/: cli.cpp  cli.hpp  memoryalloc.hpp  path.hpp  string.hpp  vector.hpp
tests/: CMakeLists.txt  FibTest.fox  arrays.fox  basic.fox  basic.lis  classification.fox  example.fox  expression_test.fox  fib.fox  fibfn.fox  importing.fox  math.fox  parse_test.fox  partials.fox  sample.cpp  sample.fox  scopedebug.fox  small_parse.fox  small_symbols.fox  symbol_test.fox  symbols.fox  testprog.fox
tests/dependents/: deeper.fox  file_a.fox  file_b.fox  file_c.fox  file_e.fox
tests/dependents/nest/: file_2.fox
tests/includes/: intrinsics.hpp  math.fox  math.hpp
